# RNotes

.github/workflows/: release.yml
RNotesApp/: package-lock.json  package.json
RNotesApp/src/: App.css  App.tsx  Editor.tsx  editorActions.ts
RNotesApp/src-tauri/: Cargo.toml  tauri.conf.json
RNotesApp/src-tauri/capabilities/: default.json
RNotesApp/src-tauri/icons/: icon.icns
RNotesApp/src-tauri/src/: config.rs  decoder.rs  document_model.rs  encoder.rs  file_handler.rs  image.rs  lib.rs  main.rs  pdf_export.rs
RNotesApp/src/components/: ActionDropdown.tsx  ContextMenu.tsx  Dropdown.tsx  FindReplacePanel.tsx  ImageElement.tsx  Miscellaneousbar.tsx  Modal.tsx  PageView.tsx  Popup.tsx  Settings.tsx  StatusBar.tsx  TabBar.tsx  Table.tsx  Toolbar.tsx  UpdateChecker.tsx
RNotesApp/src/models/: pageModel.ts
RNotesApp/src/styles/: Dropdown.css  FindReplacePanel.css  Modal.css  PageView.css  Popup.css  Settings.css  TabBar.css  UpdateChecker.css
